# Multi-Agent-Arabic-Heritage-RAG-Assistant

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  app.py  pyproject.toml  requirements.txt
src/rag_crewai/: crew.py  main.py
src/rag_crewai/config/: agents.yaml  tasks.yaml
src/rag_crewai/tools/: __init__.py  arabic_heritage_tool.py  heritage_tool.py  language_detection.py  weather_tool.py
